--- a/card.css
+++ b/card.css
@@ -1,13 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 * {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'SF Pro', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    color: var(--color-font);
     font-size: 15px;
 }
 
 :root {
-    
+    --color-bg: black;
+    --color-content: #1a1633;
+    --border-main: 1px solid white;
+    --border-radius: 5px;
+    --color-font: white;
+}
+
+body {
+    height: 100vh;
+    background: var(--color-bg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url(assets/background.png);
+    background-size: 100%;
+}
+
+#content-main {
+    height: auto;
+    width: 400px;
+    padding: 75px 0 50px 0;
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pic-perfil {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
+
+#nome {
+    font-weight: 500;
+    font-size: 1.3em;
+}
+
+#curso {
+    font-weight: 500;
+}
+
+#location {
+    font-size: 0.9em;
+}
+
+.icons {
+    display: flex;
+    gap: 25px;
 }
