--- a/card.css
+++ b/card.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(assets/background.png);
+    background: url(assets/background.jpg);
     background-size: 100%;
 }
 
