--- a/card.css
+++ b/card.css
@@ -26,7 +26,9 @@ body {
     align-items: center;
     justify-content: center;
     background: url(assets/background.jpg);
-    background-size: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #content-main {
